fixed image not covering image tag properly

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -24,7 +24,7 @@
 .venue_photo {
   width: 100%;
   height: 150px;
-  object-fit: fill;
+  object-fit: cover;
   border-radius: 10px 10px 0px 0px;
 }
 
